# AgentCore

./: .gitignore  HANDOFF.md  LICENSE  PLAN (1).md  README.md  SYSTEM_OVERVIEW.md  pyproject.toml
.github/workflows/: ci.yml
roscoe/: __init__.py
roscoe/approval/: __init__.py  gate.py
roscoe/cli/: __init__.py  eval_command.py  init_command.py  main.py  monitor_command.py  wizard_gui.py
roscoe/cli/scaffold/: .env.example  agent_config.yaml  db.py  docs.md  main.py
roscoe/cli/scaffold/evals/: test_cases.json
roscoe/config/: loader.py
roscoe/connectors/: __init__.py  _graph_base.py  base_connector.py  github.py  google_workspace.py  jira.py  notion.py  outlook.py  rest_api.py  servicenow.py  sharepoint.py  snowflake.py
roscoe/core/: __init__.py  agent_base.py  agent_result.py  agent_runner.py  executor.py  state.py
roscoe/evals/: __init__.py  dataset.py  eval_runner.py  regression.py  report.py
roscoe/evals/scorers/: __init__.py  _judge.py  base.py  hallucination.py  output_quality.py  tool_usage.py
roscoe/llm/: __init__.py  base_provider.py  capability_map.py  provider_factory.py
roscoe/memory/: __init__.py  conversation.py  knowledge.py  persistent.py
roscoe/middleware/: __init__.py  audit_logger.py  cost_tracker.py  rate_limiter.py  retry.py
roscoe/monitoring/: __init__.py  alerts.py  dashboard.py  metrics.py  notifier.py
roscoe/monitoring/exporters/: __init__.py  azure_monitor.py  prometheus.py
roscoe/templates/: __init__.py
roscoe/templates/exec_assistant_agent/: agent_config.yaml
roscoe/templates/google_workspace_agent/: agent_config.yaml
roscoe/templates/hr_agent/: agent_config.yaml
roscoe/templates/it_support_agent/: agent_config.yaml
roscoe/templates/knowledge_base_agent/: agent_config.yaml
roscoe/templates/legal_agent/: agent_config.yaml
roscoe/tools/: __init__.py  decorator.py
tests/: test_smoke.py
tests/integration/: test_e2e.py
tests/unit/: test_approval.py  test_cli.py  test_config.py  test_connectors.py  test_core_types.py  test_evals.py  test_memory.py  test_middleware.py  test_monitoring.py  test_providers.py  test_templates.py  test_tools.py
(+14 files in other folders)
