[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roscoe"
version = "0.1.3"
description = "roscoe — Ready-to-run Orchestration SDK: Configurable, Observable, Extensible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rhealaloo", email = "rhealaloo@gmail.com" }]
keywords = ["langchain", "agents", "llm", "sdk", "react"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependency pinning rule: pin langchain exactly (it breaks on minor bumps); let
# langchain-core and the provider adapters float within compatible ranges so the
# resolver stays solvable. A committed lockfile pins the rest (added at Phase 11).
# NOTE: roscoe runs its own ReAct loop (roscoe.core.executor) — no langgraph dependency.
dependencies = [
    "langchain==0.3.25",
    "langchain-openai>=0.2,<0.4",
    "langchain-google-genai>=2.0,<3.0",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-ollama>=0.2,<0.4",
    "pydantic>=2.10,<3.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]
snowflake = ["snowflake-connector-python>=3.0,<4.0"]
azure = ["azure-monitor-opentelemetry>=1.0,<2.0"]

[project.scripts]
roscoe = "roscoe.cli.main:cli"

[project.urls]
Homepage = "https://github.com/rhealaloo45/roscoe"
Repository = "https://github.com/rhealaloo45/roscoe"
Issues = "https://github.com/rhealaloo45/roscoe/issues"

[tool.setuptools.packages.find]
include = ["roscoe*"]

# Ship template + scaffold data files (the CLI copies these on `roscoe init`).
[tool.setuptools.package-data]
roscoe = [
    "templates/**/*.yaml",
    "templates/**/*.txt",
    "cli/scaffold/**/*",
    "cli/scaffold/.env.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
